--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 This is my first page 
 money heist
 
-who is your favourate 
-tokyo
-berlin
-denver
-nairobi
-palermo
-helsinki
-arturo
+who is your favourate
+ surgio
+,tokyo
+,berlin
+,denver
+,nairobi
+,palermo
+,helsinki
+,arturo
+
